// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteOneInputType should create an input type with a custom ID type 1`] = `
"\\"\\"\\"Cursor for paging through collections\\"\\"\\"
scalar ConnectionCursor

\\"\\"\\"
Relative date, an Epoch time (number), ISO Date string or a relative date value in the form of \\"last-[N]-[minutes | hours | days | weeks | months | years]\\"
\\"\\"\\"
scalar RelativeDate

type Query {
  test(input: DeleteOneCustomId!): Int!
}

input DeleteOneCustomId {
  \\"\\"\\"The id of the record to delete.\\"\\"\\"
  id: String!
}"
`;

exports[`DeleteOneInputType should create an input type with id field as the type 1`] = `
"\\"\\"\\"Cursor for paging through collections\\"\\"\\"
scalar ConnectionCursor

\\"\\"\\"
Relative date, an Epoch time (number), ISO Date string or a relative date value in the form of \\"last-[N]-[minutes | hours | days | weeks | months | years]\\"
\\"\\"\\"
scalar RelativeDate

type Query {
  test(input: DeleteOne!): Int!
}

input DeleteOne {
  \\"\\"\\"The id of the record to delete.\\"\\"\\"
  id: ID!
}"
`;
